__scss/core.scss
*, *:before, *:after { box-sizing: border-box; }

html {
  font-size: 1rem;
  min-height: 100%;
}

html, body {
  height: 100%;
}

html, body, button, input {
  font-size: 1em;
  font-family: $font-body;
}

h1, h2, h3, h4, h5, h6 {
  //font-family: $font-header;
}

a {
  text-decoration: none;
}


.works {
  height: 100%;
  width: 100%;
  position: relative;
  transition: 0.5s all $ease;
  //transition-delay: 0.4s;
  @media #{$m-t-min} {
    height: calc(100% - #{$gutter} * 2);
    left: $gutter;
    top: $gutter;
    width: calc(100% - #{$gutter} * 2);
  }
}

.work {
  align-items: center;
  animation: slideInFromBelow 0.6s $ease;
  display: flex;
  height: 100%;
  justify-content: center;
  width: 100%;
}

.work-1 .attachment {   background: #c6d5ff; color: #FFF; }
.work-2 .attachment { background: #f0e8e5; }
.work-3 .attachment { background: #ff6151; }

@keyframes slideInFromBelow {
  0% {
    transform: translate3d(0,100%,0) scale(0.8);
  }
  100% {
    transform: translate3d(0,0,0) scale(1);
  }
}

.experiment {
  width: 100px;
  height: 100px;
  background: yellow;
  //position: absolute;
  top: $gutter / 2 * -1;
  left: $gutter / 2 * -1;
  z-index: 65535;
}

h1 {
  font-weight: 900;
  font-size: 5em;
  //position: fixed;
}

.fix {
  .attachment {
    position: fixed;
    padding: $gutter;
  }
}

.attachment {
  width: 100%;
  height: 100%;
  z-index: -10;
  top: 0;
  display: flex;
  align-items: center;
  justify-content: center; 
  .work-2 & { z-index: -9; }
  .work-3 & { z-index: -8; }
}

.header {
  align-items: center;
  display: flex;
  height: 100%;
  justify-content: space-between;
  padding: 0 ($gutter + 8px);
}

.header-links a {
  border-bottom: 1px solid #aaa;
  color: #737373;
  margin-left: 28px;
}

.logo {
  font-family: $font-header;
  font-size: 1.5em;
  font-style: italic;
  font-weight: medium;
}

.is-main {

}

.appear {
  width: 100%;
  left: 0; top: 0;
}

.grow {
  position: absolute;
  z-index: 1;
  top: 0;
}

.hide {
  opacity: 0;
  height: 0;
}

